fix slider spacing

--- a/packages/components/src/mobile/bottom-sheet/range-cell.native.scss
+++ b/packages/components/src/mobile/bottom-sheet/range-cell.native.scss
@@ -47,3 +47,7 @@
 	padding-top: 8px;
 	padding-bottom: 8px;
 }
+
+.valueStyle {
+	height: 0;
+}
